--- a/myprofile/templates/myprofile/profile_form.html
+++ b/myprofile/templates/myprofile/profile_form.html
@@ -37,6 +37,33 @@
                         {% endfor %}
                     </tr>
                 {% endfor %}
+                {{ edu.management_form }}
+
+                {% for form in edu.forms %}
+                    {% if forloop.first %}
+                        <thead>
+                        <tr>
+                            {% for field in form.visible_fields %}
+                                <th>{{ field.label|capfirst }}</th>
+                            {% endfor %}
+                        </tr>
+                        </thead>
+                    {% endif %}
+                    <tr class="{% cycle row1 row2 %} formset_row2">
+                        {% for field in form.visible_fields %}
+                            <td>
+                                {# Include the hidden fields in the form #}
+                                {% if forloop.first %}
+                                    {% for hidden in form.hidden_fields %}
+                                        {{ hidden }}
+                                    {% endfor %}
+                                {% endif %}
+                                {{ field.errors.as_ul }}
+                                {{ field }}
+                            </td>
+                        {% endfor %}
+                    </tr>
+                {% endfor %}
             </table>
             <input type="submit" value="Save"/> <a href="{% url 'profile-list' %}">back to the list</a>
         </form>
@@ -48,6 +75,11 @@
             addText: 'add family member',
             deleteText: 'remove',
             prefix: 'familymember_set'
+        });
+        $('.formset_row2').formset({
+            addText: 'add education',
+            deleteText: 'remove',
+            prefix: 'edu_set'
         });
     </script>
 {% endblock %}
